@@ -1,5 +1,8 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+== 12/20/2014 ==
+Akkadius: Updated #cvs to display RoF2 Client Stream count
+
 == 12/19/2014 ==
 Trevius: (RoF2) Fixed Leadership AA Purchasing and Recipe Search by correcting opcodes.
 Trevius: Fixed Armor Tinting (players and NPCs) that was broken during a previous update.
